<resources>
    <string name="app_name">KardiachainMembership</string>
    <string name="announcement">Thông báo</string>
    <string name="failure_network_connection">Chúng tôi đang gặp khó khăn khi kết nối với Internet. Vui lòng kiểm tra kết nối của bạn</string>
    <string name="btn_cancel">Hủy</string>
    <string name="btn_ok">OK</string>
    <string name="btn_retry">Thử lại</string>
    <string name="title_content_introduce_1">KAI membership</string>
    <string name="desc_content_introduce_1">A flagship application pushing the frontier of mass adoption. A super app for the general public to earn, store, spend, and invest KAI, focusing on user experience and utilities.</string>
    <string name="title_content_introduce_2">Play &amp; Earn</string>
    <string name="desc_content_introduce_2">Sign in to entertain with plenty of interesting games and receive real KAI, mobile cards, and many lucky gifts.</string>
    <string name="title_content_introduce_3">Social Mining</string>
    <string name="desc_content_introduce_3">Contribute your unlimited creativity and complete the tokenized project missions to receive KAI rewards.</string>
    <string name="let_me_take_a_tour">Let me take a tour</string>
    <string name="sign_in">Sign In</string>
    <string name="welcome">Welcome!</string>
    <string name="content_sign_in">Sign in and start our journey with KAI.</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="hint_email">Your email</string>
    <string name="password">Password</string>
    <string name="hint_password">Your password</string>
    <string name="question_forgot_password">Forgot password?</string>
    <string name="not_a_kaiser_yet">Not a KAISER yet?</string>
    <string name="create_account">Create account</string>
    <string name="email_empty">Email can not be blank</string>
    <string name="password_empty">Password can not be blank</string>
    <string name="hint_captcha">Type captcha</string>
    <string name="be_a_member">Be a Member</string>
    <string name="content_register">1 step away to be a Kai member. We just need a few details from you.</string>
    <string name="confirm_password">Confirm password</string>
    <string name="hint_confirm_password">Your confirm password</string>
    <string name="im_already_a_kaiser">I’m already a KAISER !</string>
    <string name="confirm_captcha">Confirm captcha</string>
    <string name="captcha_empty">Captcha can not be blank</string>
    <string name="create_passcode">Create Passcode</string>
    <string name="content_create_passcode">This passcode is super handy. It can save your life sometime. Try to remember it.</string>
    <string name="show_passcode">Show Passcode</string>
    <string name="content_term_and_policy">By creating a passcode, you agree with our Terms &amp; Conditions and Privacy Policy</string>
    <string name="set_passcode">Set Passcode</string>
    <string name="confirm_passcode">Confirm Passcode</string>
    <string name="content_confirm_passcode">Confirm your passcode again. Just in case.</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_passcode_not_correct">Confirm Passcode is not correct</string>
    <string name="congrats">Congrats!</string>
    <string name="content_register_success">Welcome to Kai membership!\nYou have got 01 lucky spin</string>
    <string name="spin_later">Spin Later</string>
    <string name="spin_now">Spin Now</string>
    <string name="forgot_password">Forgot password</string>
    <string name="content_forgot_password">We will send an instruction to your email.</string>
    <string name="hint_email_forgot_password">Enter your email</string>
    <string name="send_instructions">Send Instructions</string>
    <string name="content_not_receive_any_email">Did not receive any email? \nCheck your spam filter, or</string>
    <string name="resend_another_mail">resend another mail</string>
    <string name="new_password">New Password</string>
    <string name="content_new_password">Your new password must be different from previous used one. Try to remember it this time.</string>
    <string name="hint_new_password">Enter your new password</string>
    <string name="hint_old_password">Enter your old password</string>
    <string name="paste_your_token_here">Paste your token here</string>
    <string name="set_new_password">Set new Password</string>
    <string name="hint_paste_your_token">Enter your token</string>
    <string name="old_password">Old Password</string>
    <string name="old_password_empty">Old Password can not be blank</string>
    <string name="new_password_empty">New Password can not be blank</string>
    <string name="confirm_password_empty">Confirm Password can not be blank</string>
    <string name="confirm_password_not_correct">Confirm Password is not correct</string>
    <string name="token_empty">Token can not be blank</string>
    <string name="content_new_password_success">Your new Password is ready.</string>
    <string name="ok_i_got_it">OK, I got it</string>
    <string name="title_password_changed">Password changed</string>
    <string name="content_password_changed">Your new password is now applied.\nKeep it safe &amp; sound</string>
    <string name="select_account">Select Account</string>
    <string name="content_select_account">Choose the account you want.</string>
    <string name="sign_in_to_another_account">Sign in to another account</string>
    <string name="enter_passcode">Enter passcode</string>
    <string name="content_enter_passcode">Enter your passcode to continue.</string>
    <string name="content_forgot_code">Can’t remember my code.</string>
    <string name="click_here">Click here</string>
    <string name="text_continue">Continue</string>
    <string name="reset_passcode">Reset Passcode</string>
    <string name="content_reset_passcode">We will send an email with instructions to your registered email.</string>
    <string name="instruction_sent">Instruction Sent</string>
    <string name="content_instruction_sent_1">We have sent you a email confirmation to</string>
    <string name="content_instruction_sent_2">email. Please check.</string>
    <string name="open_email_app">Open email app</string>
    <string name="content_not_receive_email">Did not receive any email? Check your spam filter, or resend another mail</string>
    <string name="new_passcode">New Passcode</string>
    <string name="content_new_passcode">This passcode is super handy. It can save your life sometime. Try to remember it.</string>
    <string name="text_navigation_news">News</string>
    <string name="text_navigation_mission">Mission</string>
    <string name="text_navigation_games">NFT</string>
    <string name="text_navigation_wallet">My Wallet</string>
    <string name="text_navigation_utilities">Utilities</string>
    <string name="content_noti_receive_spin">You have %02d free spin</string>
    <string name="balance">Balance</string>
    <string name="holder">Holder</string>
    <string name="member_since">Member since</string>
    <string name="title_no_transaction">No Transaction</string>
    <string name="content_no_transaction">Start your first transaction</string>
    <string name="kai_unit">KAI</string>
    <string name="wallet_address_from">From: %s</string>
    <string name="wallet_address_to">To: %s</string>
    <string name="recent_transactions">Recent Transactions</string>
    <string name="label_menu_fab_buy">BUY</string>
    <string name="label_menu_fab_get">RECEIVE</string>
    <string name="label_menu_fab_send">SEND</string>
    <string name="latest_news">Latest News</string>
    <string name="receive">Receive</string>
    <string name="my_address">My Address</string>
    <string name="set_amount">Set amount</string>
    <string name="share">Share</string>
    <string name="buy">Buy</string>
    <string name="title_buy">Nami Exchange - Crypto Futures</string>
    <string name="content_buy">In order to ensure trading security, we must process through our partner\'s platform.\nPlease open Nami Exchange - Crypto Futures so we can progress faster.</string>
    <string name="download_nami_from_appStore">Download Nami from AppStore</string>
    <string name="open_nami">Open Nami</string>
    <string name="title_mobile_topup">Mobile Topup</string>
    <string name="content_mobile_topup">Topup your mobile account with KAI.</string>
    <string name="topup_now">Topup Now</string>
    <string name="title_get_vouchers">Get Vouchers</string>
    <string name="content_get_vouchers">Voucher here, vouchers there, vouchers everywhere.</string>
    <string name="get_my_vouchers">Get my Vouchers</string>
    <string name="title_KAI_starter">KAI Starter</string>
    <string name="content_KAI_starter">Think Kickstarter meets Lock&amp;Earn</string>
    <string name="invest">Invest</string>
    <string name="title_top_up">Top-up</string>
    <string name="my_balance">My Balance</string>
    <string name="top_up_settings">Topup Settings</string>
    <string name="phone_no">Phone no.</string>
    <string name="hint_phone_no">e.g 01669919308</string>
    <string name="service_provider">Service provider</string>
    <string name="top_up_amount">Top up amount</string>
    <string name="overview">Overview</string>
    <string name="title_top_up_fail">Fail?</string>
    <string name="content_top_up_fail">Maybe the provider service is wrong.\nCheck your inputed phone number also.</string>
    <string name="check_again">Check again</string>
    <string name="title_top_up_success">Success</string>
    <string name="content_top_up_success">Happy trading!</string>
    <string name="back_to_utilities">Back to Utilities</string>
    <string name="phone_empty">Phone can not be blank</string>
    <string name="personal">Personal</string>
    <string name="my_profile">My Profile</string>
    <string name="my_rewards">My Rewards</string>
    <string name="change_password">Change Password</string>
    <string name="others">Others</string>
    <string name="switch_account">Switch Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="signature_profile">Kardiachain © %s - Version %s</string>
    <string name="full_name">Full Name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="update_profile">Update Profile</string>
    <string name="full_name_empty">Full name can not be blank</string>
    <string name="daily_mission">Daily mission</string>
    <string name="monthly_mission">Monthly mission</string>
    <string name="content_mission">01 spin for every finished mission.\nGet it now!</string>
    <string name="completed">Completed</string>
    <string name="content_top_score">Top score: %s (%s)</string>
    <string name="unverified">Unverified</string>
    <string name="rate_me">Rate me</string>
    <string name="content_rate_me">Thanks for choosing us.\nPlease take 1 minute for rate app or write suggestion message for us. We would be glad to hear your opinion. 🤗</string>
    <string name="rate_later">Rate later</string>
    <string name="rate_us">Rate us ⭐</string>
    <string name="my_reward">My reward</string>
    <string name="title_no_data_reward">No Reward</string>
    <string name="content_no_data_reward">You don’t have any reward to claim.\nStart doing missions now and earn valuable gifts</string>
    <string name="go_to_mission">Go to Mission</string>
    <string name="title_fill_the_form">You won!</string>
    <string name="content_fill_the_form">We will need some details so your gift can be send correctly.</string>
    <string name="fill_the_form">Fill the Form</string>
    <string name="history">History</string>
    <string name="redeem">Redeem</string>
    <string name="top_up">Top-up</string>
    <string name="verification">Verification</string>
    <string name="content_verification">Check your email for token</string>
    <string name="set_new_passcode">Set new Passcode</string>
</resources>