<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_news"
        android:icon="@drawable/ic_news_home"
        android:title="@string/text_navigation_news"
        android:checked="true"
        android:enabled="true"/>
    <item
        android:id="@+id/navigation_mission"
        android:icon="@drawable/ic_rocket_home"
        android:title="@string/text_navigation_mission" />
    <item
        android:id="@+id/navigation_games"
        android:icon="@drawable/ic_games_home"
        android:title="@string/text_navigation_games" />

    <item
        android:id="@+id/navigation_wallet"
        android:icon="@drawable/ic_wallet_home"
        android:title="@string/text_navigation_wallet" />
    <item
        android:id="@+id/navigation_utilities"
        android:icon="@drawable/ic_utilities_home"
        android:title="@string/text_navigation_utilities" />
</menu>