<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/_16sdp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:fontFamily="@font/text_regular"
            android:text="@string/welcome"
            android:textColor="@color/color_DE000000"
            android:textSize="@dimen/_24ssp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:fontFamily="@font/text_medium"
            android:text="@string/content_sign_in"
            android:textColor="@color/color_8A000000"
            android:textSize="@dimen/_12ssp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_70sdp"
            android:fontFamily="@font/text_medium"
            android:text="@string/email"
            android:textAllCaps="true"
            android:textColor="@color/color_364766"
            android:textSize="@dimen/_8ssp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4sdp"
            style="@style/TextInputLayoutStyleNormal">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tietEmail"
                style="@style/TextInputEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/text_medium"
            android:text="@string/password"
            android:textAllCaps="true"
            android:textColor="@color/color_364766"
            android:textSize="@dimen/_8ssp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4sdp"
            style="@style/TextInputLayoutStylePassword">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tietPassword"
                style="@style/TextInputEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password"
                android:imeOptions="actionNext"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tvForgotPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:fontFamily="@font/text_medium"
            android:gravity="end"
            android:text="@string/question_forgot_password"
            android:textColor="@color/color_94A2B2"
            android:textSize="@dimen/_10ssp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btSignIn"
            style="@style/UnelevatedButtonEnableStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:text="@string/sign_in" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/text_medium"
                android:text="@string/not_a_kaiser_yet"
                android:textColor="@color/color_8A000000"
                android:textSize="@dimen/_12ssp" />

            <TextView
                android:id="@+id/tvCreateAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_2sdp"
                android:fontFamily="@font/text_medium"
                android:text="@string/create_account"
                android:textColor="@color/color_94A2B2"
                android:textSize="@dimen/_12ssp" />
        </LinearLayout>
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btSkip"
        style="@style/OutlinedButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/let_me_take_a_tour" />
</RelativeLayout>