<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/lToolbar"
        layout="@layout/layout_toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lToolbar"
        android:orientation="vertical"
        android:paddingStart="@dimen/_16sdp"
        android:paddingEnd="@dimen/_16sdp">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/text_regular"
            android:text="@string/forgot_password"
            android:textColor="@color/color_DE000000"
            android:textSize="@dimen/_26ssp" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:fontFamily="@font/text_medium"
            android:text="@string/content_forgot_password"
            android:lineSpacingExtra="@dimen/_6sdp"
            android:textColor="@color/color_8A000000"
            android:textSize="@dimen/_11ssp" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_24sdp"
            android:fontFamily="@font/text_medium"
            android:text="@string/email"
            android:textAllCaps="true"
            android:textColor="@color/color_364766"
            android:textSize="@dimen/_9ssp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4sdp"
            style="@style/TextInputLayoutStyleNormal">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tietEmail"
                style="@style/TextInputEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email_forgot_password"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvMessageEmailEmpty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4sdp"
            android:fontFamily="@font/text_regular"
            android:text="@string/email_empty"
            android:textColor="@color/color_C42C15"
            android:textSize="@dimen/_10ssp"
            android:visibility="gone" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btSendInstructions"
            style="@style/UnelevatedButtonEnableStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:text="@string/send_instructions" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/text_medium"
            android:text="@string/content_not_receive_any_email"
            android:lineSpacingExtra="@dimen/_6sdp"
            android:textColor="@color/color_8A000000"
            android:gravity="center"
            android:textSize="@dimen/_11ssp" />
    </LinearLayout>
</RelativeLayout>