<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/lToolbar"
        layout="@layout/layout_toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lToolbar"
        android:orientation="vertical"
        android:paddingStart="@dimen/_16sdp"
        android:paddingEnd="@dimen/_16sdp">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/text_regular"
            android:text="@string/verification"
            android:textColor="@color/color_DE000000"
            android:textSize="@dimen/_26ssp" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:fontFamily="@font/text_medium"
            android:lineSpacingExtra="@dimen/_6sdp"
            android:text="@string/content_verification"
            android:textColor="@color/color_8A000000"
            android:textSize="@dimen/_11ssp" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_26sdp"
            android:fontFamily="@font/text_medium"
            android:text="@string/paste_your_token_here"
            android:textAllCaps="true"
            android:textColor="@color/color_364766"
            android:textSize="@dimen/_9ssp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilToken"
            style="@style/TextInputLayoutStyleNormal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4sdp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tietToken"
                style="@style/TextInputEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_paste_your_token"
                android:imeOptions="actionNext"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvMessageTokenEmpty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4sdp"
            android:fontFamily="@font/text_regular"
            android:text="@string/token_empty"
            android:textColor="@color/color_C42C15"
            android:textSize="@dimen/_10ssp"
            android:visibility="gone" />


    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btSetNewPasscode"
        style="@style/UnelevatedButtonEnableStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:text="@string/set_new_passcode" />

</RelativeLayout>