<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="@dimen/_16sdp"
    android:orientation="vertical">

    <ImageView
        android:layout_width="@dimen/_200sdp"
        android:layout_height="@dimen/_150sdp"
        android:src="@drawable/ic_new_pasword_success" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/text_medium"
        android:text="@string/congrats"
        android:textColor="@color/color_DE000000"
        android:textSize="@dimen/_22ssp"
        android:layout_marginTop="@dimen/_24sdp"/>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:fontFamily="@font/text_medium"
        android:text="@string/content_new_password_success"
        android:textColor="@color/color_8A000000"
        android:textSize="@dimen/_11ssp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btOKIGotIt"
        style="@style/UnelevatedButtonEnableStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:text="@string/ok_i_got_it" />
</LinearLayout>